[package]
name = "rusteadux"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "An easy-to-use TUI crate for Rust, based off of the Elm architecture."
homepage = "https://github.com/frayer/rusteadux"
readme = "README.md"
repository = "https://github.com/frayer/rusteadux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
